tests/ui/explicit-tail-calls/constck.stderr
error[E0015]: cannot call non-const function `not_const` in constant functions
  --> $DIR/constck.rs:6:16
   |
LL |         become not_const();
   |                ^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const function `not_const` in constant functions
  --> $DIR/constck.rs:13:26
   |
LL |         become yes_const(not_const());
   |                          ^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
